# infoweb

./: README.md  main.py  requirements.txt  setup.cfg
static/: main.js
templates/: index.html
