[metadata]
name = infoweb
summary = A Python web proxy to make any site informational
author = Chris Norman
author-email = chris.norman2@googlemail.com
description-file = README.md
home-page = https://github.com/chrisnorman7/
license = MPL-2

[tool:pytest]
filterwarnings = error
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
